# console_animation

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_alpine_prod  Dockerfile_production  README.md  USAGE.txt  config  docker-compose.yml  hula140x45-14f  rick10-25
.devcontainer/: Dockerfile  start  stop
.github/workflows/: build_obs.yml
debian/: changelog  control  rules
package/: CMakeLists.txt  conanim.spec  debian.changelog  debian.control  debian.dsc
package/Yui/: pages-5-edit.xcf
package/conanim-0.0.0/: LICENSE
package/conanim-0.0.0/src/: main.cpp
package/conanim-0.0.0/src/include/: env_arguments.hpp  frames.hpp
package/conanim-0.0.0/src/utils/: ThreadPool.cpp
package/home:trukhinmaksim:conanim/.osc/: _packages  _project
package/home:trukhinmaksim:conanim/conanim/: debian.control
package/home:trukhinmaksim:conanim/conanim/.osc/: _files  _meta  _package
package/test/: conanim-0.0.0-90.1.x86_64.rpm  docker-compose.yml
package/test/centos8/: conanim-0.0.0-90.1.x86_64.rpm
package/test/debian10/: conanim_0.0.0-1_amd64.deb
package/test/debian11/: conanim_0.0.0-1_amd64.deb
package/test/debian12/: conanim_0.0.0-1_amd64.deb
package/test/debian13/: conanim_0.0.0-1_amd64.deb
sh/: install  jp2a  main
src/: cli_arguments.cpp  env_arguments.cpp  frames.cpp  main.cpp  render.cpp  storage.cpp
src/include/: cli_arguments.hpp  env_arguments.hpp  exception.hpp  frames.hpp  render.hpp  storage.hpp
src/utils/: TerminalRestorer.cpp  ThreadPool.cpp  check_path.cpp  exec_command.cpp  format.cpp
